--- a/src/app/styles.css
+++ b/src/app/styles.css
@@ -11,7 +11,7 @@ h1 {
 }
 
 
-/* CUSTOM TAILWIND CLASSES */
+/* ^^^^^^^^ CUSTOM TAILWIND CLASSES ^^^^^^^^ */
 
 .root-container {
   @apply bg-gray-200 h-full w-full;
